fix the overlapping problem between the notifications and the button

--- a/project 27 toast notification/style.css
+++ b/project 27 toast notification/style.css
@@ -31,6 +31,7 @@ body {
   font-family: inherit;
   font-size: 15px;
   cursor: pointer;
+  z-index: 3;
 }
 .show-notification:focus {
   outline: none;
